@@ -1,6 +1,12 @@
 2006-04-23  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.c:
+	In completion_cb only manipulate the track store if there is stuff
+	in it (#333402)
+
+2006-04-23  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
 	Fix progress bar calculation (John Thacker, #339062).
 
 2006-04-23  Ross Burton  <ross@burtonini.com>
